--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Lobo - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer Localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
