--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer Localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
